objects/Account.object
<CustomObject>
    <fields>
        <fullName>sf42_us_Application__c</fullName>
        <label>US Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesives</fullName>
                </value>
                <value>
                    <fullName>Alignment - Condition Monitoring</fullName>
                </value>
                <value>
                    <fullName>Alignment - Optical</fullName>
                </value>
                <value>
                    <fullName>Alignment - Other</fullName>
                </value>
                <value>
                    <fullName>Alignment - Shaft</fullName>
                </value>
                <value>
                    <fullName>Annealing</fullName>
                </value>
                <value>
                    <fullName>Blown Film</fullName>
                </value>
                <value>
                    <fullName>Calendering</fullName>
                </value>
                <value>
                    <fullName>Cast Film</fullName>
                </value>
                <value>
                    <fullName>Coating</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Conveyor Belt</fullName>
                </value>
                <value>
                    <fullName>Corrugated</fullName>
                </value>
                <value>
                    <fullName>CTL - Cut To Length</fullName>
                </value>
                <value>
                    <fullName>Die Cutting</fullName>
                </value>
                <value>
                    <fullName>Embossing</fullName>
                </value>
                <value>
                    <fullName>Extrusion</fullName>
                </value>
                <value>
                    <fullName>Fabrication</fullName>
                </value>
                <value>
                    <fullName>Felt/Wire/Clothing</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Flexofoldergluer</fullName>
                </value>
                <value>
                    <fullName>Flexography</fullName>
                </value>
                <value>
                    <fullName>Foil</fullName>
                </value>
                <value>
                    <fullName>Galvanizing - Electroplating</fullName>
                </value>
                <value>
                    <fullName>Galvanizing - Hot Dip</fullName>
                </value>
                <value>
                    <fullName>Gypsum/Drywall</fullName>
                </value>
                <value>
                    <fullName>Labels</fullName>
                </value>
                <value>
                    <fullName>Laminate Flooring</fullName>
                </value>
                <value>
                    <fullName>Laminating</fullName>
                </value>
                <value>
                    <fullName>Laser Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Client_Level__c</fullName>
        <label>US Client Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Contacted</fullName>
                </value>
                <value>
                    <fullName>Contact Made</fullName>
                </value>
                <value>
                    <fullName>Stop By</fullName>
                </value>
                <value>
                    <fullName>Wants Demo</fullName>
                </value>
                <value>
                    <fullName>Demonstration</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Multiple Jobs</fullName>
                </value>
                <value>
                    <fullName>Closed Down</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Denial_Reason__c</fullName>
        <label>US Denial Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Tramming of Rolls</fullName>
                </value>
                <value>
                    <fullName>Machines (&lt;20 rolls)</fullName>
                </value>
                <value>
                    <fullName>Roll Size</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Non_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Non Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_us_Shutdown_Frequency__c</fullName>
        <label>US Shutdown Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Often: &lt; 6 weeks</fullName>
                </value>
                <value>
                    <fullName>Often: 6 - 8 Weeks</fullName>
                </value>
                <value>
                    <fullName>Quarterly: 3 Months</fullName>
                </value>
                <value>
                    <fullName>Biannually: 6 Months</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Only when needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Status__c</fullName>
        <label>US Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invalid Phone No.</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>No Rolls</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Open Client</fullName>
                </value>
                <value>
                    <fullName>Shut Down</fullName>
                </value>
                <value>
                    <fullName>Wants to buy a PARALIGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>AL_CM_or_NDT_must_be_checked</fullName>
        <active>false</active>
        <description>C-00003669 At least one checkbox ALI,CM or NDT must be checked</description>
        <errorConditionFormula>sf42_gl_ALI__c  = FALSE  &amp;&amp;  sf42_gl_CM__c  = FALSE  &amp;&amp; sf42_gl_NDT__c = FALSE &amp;&amp;   NOT(ISPICKVAL( $User.sf42_Business_Unit__c , &quot;Poland Technology&quot;))</errorConditionFormula>
        <errorDisplayField>sf42_gl_NDT__c</errorDisplayField>
        <errorMessage>Account must have ALI,CM or NDT field checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_as_Customer</fullName>
        <active>false</active>
        <description>Validate the Account setting as Customer. The Customer value can be set when at least one won opportunity exist.</description>
        <errorConditionFormula>CONTAINS(sf42_Business_Unit__c,&quot;Germany&quot;) &amp;&amp; ptt_Number_of_Won_Opportunities__c  = 0 &amp;&amp; 
ISPICKVAL( Type, &quot;Customer&quot;)</errorConditionFormula>
        <errorMessage>Register at least one won Opportunity under the Account to change the Type to Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Canada_Billing_State_validation</fullName>
        <active>true</active>
        <description>Validate Canada state name. Must be AB, QC, NT, ON, PEI, NL, YU, BC,NU, NS, NB, MB or SK.</description>
        <errorConditionFormula>BillingCountry = &quot;Canada&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Canada&apos;) &amp;&amp; AND(
BillingState != &quot;AB&quot;,
BillingState != &quot;QC&quot;,
BillingState != &quot;NT&quot;, 
BillingState != &quot;ON&quot;, 
BillingState != &quot;PEI&quot;,
BillingState != &quot;NL&quot;,
BillingState != &quot;YU&quot;,
BillingState != &quot;BC&quot;,
BillingState != &quot;NU&quot;,
BillingState != &quot;NS&quot;,
BillingState != &quot;NB&quot;,
BillingState != &quot;MB&quot;,
BillingState != &quot;SK&quot;
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use: 
AB, QC, NT, ON, PEI, NL, YU, BC,NU, NS, NB, MB or SK.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>France_Billing_state</fullName>
        <active>true</active>
        <errorConditionFormula>sf42_Business_Unit__c = &quot;France&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;France&apos;) &amp;&amp; AND(
BillingState != &quot;BELGIQUE&quot;,
BillingState != &quot;LUXEMBOURG&quot;,
BillingState != &quot;NORD EST&quot;,
BillingState != &quot;SUD EST&quot;,
BillingState != &quot;OUEST&quot;,
BillingState != &quot;PARIS NORMANDIE&quot;,
BillingState != &quot;AUTRE&quot;,
BillingState != &quot;MAROC&quot;,
BillingState != &quot;TUNISIE&quot;,
BillingState != &quot;ALGERIE&quot;
)</errorConditionFormula>
        <errorMessage>Filed “Billing state/Province&quot; cannot be empty. Values:
BELGIQUE, LUXEMBOURG, NORD EST, SUD EST, OUEST, PARIS NORMANDIE, AUTRE,MAROC,TUNISIE,ALGERIE</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Industry_must_be_selected</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Created_form_Lead__c &lt;&gt; &apos;&apos;,
ISPICKVAL(Industry,&apos;&apos;)
)</errorConditionFormula>
        <errorDisplayField>Industry</errorDisplayField>
        <errorMessage>***** Filed Industry cannot be empty.
Please return to Lead record and specify Industry. *****</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Italy_Billing_State_validation</fullName>
        <active>true</active>
        <description>Validate Italy state name. Must be two letters for example AQ, CH, PE or TE for Abruzzo region.</description>
        <errorConditionFormula>BillingCountry  = &quot;Italy&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Italy&apos;) &amp;&amp; AND(
BillingState != &quot;AQ&quot;, BillingState != &quot;CH&quot;, BillingState != &quot;PE&quot;, BillingState != &quot;TE&quot;,
BillingState != &quot;MT&quot;, BillingState != &quot;PZ&quot;,
BillingState != &quot;CZ&quot;, BillingState != &quot;CS&quot;, BillingState != &quot;KR&quot;, BillingState != &quot;RC&quot;, BillingState != &quot;VV&quot;,
BillingState != &quot;AV&quot;, BillingState != &quot;BN&quot;, BillingState != &quot;CE&quot;, BillingState != &quot;NA&quot;, BillingState != &quot;SA&quot;,
BillingState != &quot;BO&quot;, BillingState != &quot;FE&quot;, BillingState != &quot;FC&quot;, BillingState != &quot;MO&quot;, BillingState != &quot;PR&quot;, BillingState != &quot;PC&quot;, BillingState != &quot;RA&quot;, BillingState != &quot;RE&quot;, BillingState != &quot;RN&quot;,
BillingState != &quot;GO&quot;, BillingState != &quot;PN&quot;, BillingState != &quot;TS&quot;, BillingState != &quot;UD&quot;,
BillingState != &quot;FR&quot;, BillingState != &quot;LT&quot;, BillingState != &quot;RI&quot;, BillingState != &quot;RM&quot;, BillingState != &quot;VT&quot;,
BillingState != &quot;GE&quot;, BillingState != &quot;IM&quot;, BillingState != &quot;SP&quot;, BillingState != &quot;SV&quot;,
BillingState != &quot;BG&quot;, BillingState != &quot;BS&quot;, BillingState != &quot;CO&quot;, BillingState != &quot;CR&quot;, BillingState != &quot;LC&quot;, BillingState != &quot;LO&quot;, BillingState != &quot;MN&quot;, BillingState != &quot;MI&quot;, BillingState != &quot;MB&quot;, BillingState != &quot;PV&quot;, BillingState != &quot;SO&quot;, BillingState != &quot;VA&quot;,
BillingState != &quot;AN&quot;, BillingState != &quot;AP&quot;, BillingState != &quot;FM&quot;, BillingState != &quot;MC&quot;, BillingState != &quot;PU&quot;,
BillingState != &quot;CB&quot;, BillingState != &quot;IS&quot;,
BillingState != &quot;AL&quot;, BillingState != &quot;AT&quot;, BillingState != &quot;BI&quot;, BillingState != &quot;CN&quot;, BillingState != &quot;NO&quot;, BillingState != &quot;TO&quot;, BillingState != &quot;VB&quot;, BillingState != &quot;VC&quot;,
BillingState != &quot;BA&quot;, BillingState != &quot;BT&quot;, BillingState != &quot;BR&quot;, BillingState != &quot;FG&quot;, BillingState != &quot;LE&quot;, BillingState != &quot;TA&quot;,
BillingState != &quot;CA&quot;, BillingState != &quot;CI&quot;, BillingState != &quot;VS&quot;, BillingState != &quot;NU&quot;, BillingState != &quot;OG&quot;, BillingState != &quot;OT&quot;, BillingState != &quot;OR&quot;, BillingState != &quot;SS&quot;,
BillingState != &quot;AG&quot;, BillingState != &quot;CL&quot;, BillingState != &quot;CT&quot;, BillingState != &quot;EN&quot;, BillingState != &quot;ME&quot;, BillingState != &quot;PA&quot;, BillingState != &quot;RG&quot;, BillingState != &quot;SR&quot;, BillingState != &quot;TP&quot;,
BillingState != &quot;AR&quot;, BillingState != &quot;FI&quot;, BillingState != &quot;GR&quot;, BillingState != &quot;LI&quot;, BillingState != &quot;LU&quot;, BillingState != &quot;MS&quot;, BillingState != &quot;PI&quot;, BillingState != &quot;PT&quot;, BillingState != &quot;PO&quot;, BillingState != &quot;SI&quot;,
BillingState != &quot;BZ&quot;, BillingState != &quot;TN&quot;,
BillingState != &quot;PG&quot;, BillingState != &quot;TR&quot;,
BillingState != &quot;AO&quot;,
BillingState != &quot;BL&quot;, BillingState != &quot;PD&quot;, BillingState != &quot;RO&quot;, BillingState != &quot;TV&quot;, BillingState != &quot;VE&quot;, BillingState != &quot;VR&quot;, BillingState != &quot;VI&quot;
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use two-letter word.
For example AQ, CH, PE or TE for Abruzzo region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Italy_Shipping_State_validation</fullName>
        <active>true</active>
        <description>Validate Italy shipping state name. Must be two letters for example AQ, CH, PE or TE for Abruzzo region.</description>
        <errorConditionFormula>ShippingCountry  = &quot;Italy&quot; &amp;&amp;  CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Italy&apos;)  &amp;&amp; AND(
ShippingState != &quot;AQ&quot;, ShippingState != &quot;CH&quot;, ShippingState != &quot;PE&quot;, ShippingState != &quot;TE&quot;,
ShippingState != &quot;MT&quot;, ShippingState != &quot;PZ&quot;,
ShippingState != &quot;CZ&quot;, ShippingState != &quot;CS&quot;, ShippingState != &quot;KR&quot;, ShippingState != &quot;RC&quot;, ShippingState != &quot;VV&quot;,
ShippingState != &quot;AV&quot;, ShippingState != &quot;BN&quot;, ShippingState != &quot;CE&quot;, ShippingState != &quot;NA&quot;, ShippingState != &quot;SA&quot;,
ShippingState != &quot;BO&quot;, ShippingState != &quot;FE&quot;, ShippingState != &quot;FC&quot;, ShippingState != &quot;MO&quot;, ShippingState != &quot;PR&quot;, ShippingState != &quot;PC&quot;, ShippingState != &quot;RA&quot;, ShippingState != &quot;RE&quot;, ShippingState != &quot;RN&quot;,
ShippingState != &quot;GO&quot;, ShippingState != &quot;PN&quot;, ShippingState != &quot;TS&quot;, ShippingState != &quot;UD&quot;,
ShippingState != &quot;FR&quot;, ShippingState != &quot;LT&quot;, ShippingState != &quot;RI&quot;, ShippingState != &quot;RM&quot;, ShippingState != &quot;VT&quot;,
ShippingState != &quot;GE&quot;, ShippingState != &quot;IM&quot;, ShippingState != &quot;SP&quot;, ShippingState != &quot;SV&quot;,
ShippingState != &quot;BG&quot;, ShippingState != &quot;BS&quot;, ShippingState != &quot;CO&quot;, ShippingState != &quot;CR&quot;, ShippingState != &quot;LC&quot;, ShippingState != &quot;LO&quot;, ShippingState != &quot;MN&quot;, ShippingState != &quot;MI&quot;, ShippingState != &quot;MB&quot;, ShippingState != &quot;PV&quot;, ShippingState != &quot;SO&quot;, ShippingState != &quot;VA&quot;,
ShippingState != &quot;AN&quot;, ShippingState != &quot;AP&quot;, ShippingState != &quot;FM&quot;, ShippingState != &quot;MC&quot;, ShippingState != &quot;PU&quot;,
ShippingState != &quot;CB&quot;, ShippingState != &quot;IS&quot;,
ShippingState != &quot;AL&quot;, ShippingState != &quot;AT&quot;, ShippingState != &quot;BI&quot;, ShippingState != &quot;CN&quot;, ShippingState != &quot;NO&quot;, ShippingState != &quot;TO&quot;, ShippingState != &quot;VB&quot;, ShippingState != &quot;VC&quot;,
ShippingState != &quot;BA&quot;, ShippingState != &quot;BT&quot;, ShippingState != &quot;BR&quot;, ShippingState != &quot;FG&quot;, ShippingState != &quot;LE&quot;, ShippingState != &quot;TA&quot;,
ShippingState != &quot;CA&quot;, ShippingState != &quot;CI&quot;, ShippingState != &quot;VS&quot;, ShippingState != &quot;NU&quot;, ShippingState != &quot;OG&quot;, ShippingState != &quot;OT&quot;, ShippingState != &quot;OR&quot;, ShippingState != &quot;SS&quot;,
ShippingState != &quot;AG&quot;, ShippingState != &quot;CL&quot;, ShippingState != &quot;CT&quot;, ShippingState != &quot;EN&quot;, ShippingState != &quot;ME&quot;, ShippingState != &quot;PA&quot;, ShippingState != &quot;RG&quot;, ShippingState != &quot;SR&quot;, ShippingState != &quot;TP&quot;,
ShippingState != &quot;AR&quot;, ShippingState != &quot;FI&quot;, ShippingState != &quot;GR&quot;, ShippingState != &quot;LI&quot;, ShippingState != &quot;LU&quot;, ShippingState != &quot;MS&quot;, ShippingState != &quot;PI&quot;, ShippingState != &quot;PT&quot;, ShippingState != &quot;PO&quot;, ShippingState != &quot;SI&quot;,
ShippingState != &quot;BZ&quot;, ShippingState != &quot;TN&quot;,
ShippingState != &quot;PG&quot;, ShippingState != &quot;TR&quot;,
ShippingState != &quot;AO&quot;,
ShippingState != &quot;BL&quot;, ShippingState != &quot;PD&quot;, ShippingState != &quot;RO&quot;, ShippingState != &quot;TV&quot;, ShippingState != &quot;VE&quot;, ShippingState != &quot;VR&quot;, ShippingState != &quot;VI&quot;
)</errorConditionFormula>
        <errorDisplayField>ShippingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use two-letter word.
For example AQ, CH, PE or TE for Abruzzo region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Poland_Billing_State</fullName>
        <active>false</active>
        <description>Validation of state name when country is Poland.</description>
        <errorConditionFormula>BillingCountry = &quot;Poland&quot; &amp;&amp;  CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Poland&apos;)  &amp;&amp; AND(
BillingState != &quot;Dolnośląskie&quot;,
BillingState != &quot;dolnośląskie&quot;,
BillingState != &quot;Kujawsko-pomorskie&quot;, 
BillingState != &quot;kujawsko-pomorskie&quot;, 
BillingState != &quot;Lubelskie&quot;,
BillingState != &quot;lubelskie&quot;,
BillingState != &quot;Lubuskie&quot;,
BillingState != &quot;lubuskie&quot;,
BillingState != &quot;Łódzkie&quot;,
BillingState != &quot;łódzkie&quot;,
BillingState != &quot;Małopolskie&quot;,
BillingState != &quot;małopolskie&quot;,
BillingState != &quot;Mazowieckie&quot;,
BillingState != &quot;mazowieckie&quot;,
BillingState != &quot;Opolskie&quot;,
BillingState != &quot;opolskie&quot;,
BillingState != &quot;Podkarpackie&quot;,
BillingState != &quot;podkarpackie&quot;,
BillingState != &quot;Podlaskie&quot;,
BillingState != &quot;podlaskie&quot;,
BillingState != &quot;Pomorskie&quot;,
BillingState != &quot;pomorskie&quot;,
BillingState != &quot;Śląskie&quot;,
BillingState != &quot;śląskie&quot;,
BillingState != &quot;Świętokrzyskie&quot;,
BillingState != &quot;świętokrzyskie&quot;,
BillingState != &quot;Warmińsko-mazurskie&quot;,
BillingState != &quot;warmińsko-mazurskie&quot;,
BillingState != &quot;Wielkopolskie&quot;,
BillingState != &quot;wielkopolskie&quot;,
BillingState != &quot;Zachodniopomorskie&quot;,
BillingState != &quot;zachodniopomorskie&quot;
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use correct Address State/Province name. For example: dolnośląskie.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Spain_Billing_State</fullName>
        <active>true</active>
        <description>Validation of state name when country is Spain.</description>
        <errorConditionFormula>BillingCountry = &quot;Spain&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Spain&apos;) &amp;&amp; AND(
BillingState != &quot;A Coruña&quot;,
BillingState != &quot;Álava&quot;,
BillingState != &quot;Albacete&quot;,
BillingState != &quot;Alicante&quot;,
BillingState != &quot;Almería&quot;,
BillingState != &quot;Asturias&quot;,
BillingState != &quot;Ávila&quot;,
BillingState != &quot;Badajoz&quot;,
BillingState != &quot;Barcelona&quot;,
BillingState != &quot;Burgos&quot;,
BillingState != &quot;Cáceres&quot;,
BillingState != &quot;Cádiz&quot;,
BillingState != &quot;Cantabria&quot;,
BillingState != &quot;Castellón&quot;,
BillingState != &quot;Ciudad Real&quot;,
BillingState != &quot;Córdoba&quot;,
BillingState != &quot;Cuenca&quot;,
BillingState != &quot;Girona&quot;,
BillingState != &quot;Granada&quot;,
BillingState != &quot;Guadalajara&quot;,
BillingState != &quot;Guipúzcoa&quot;,
BillingState != &quot;Huelva&quot;,
BillingState != &quot;Huesca&quot;,
BillingState != &quot;Illes Balears&quot;,
BillingState != &quot;Jaén&quot;,
BillingState != &quot;León&quot;,
BillingState != &quot;Lleida&quot;,
BillingState != &quot;Lugo&quot;,
BillingState != &quot;Madrid&quot;,
BillingState != &quot;Málaga&quot;,
BillingState != &quot;Murcia&quot;,
BillingState != &quot;Navarra&quot;,
BillingState != &quot;Ourense&quot;,
BillingState != &quot;Palencia&quot;,
BillingState != &quot;Las Palmas&quot;,
BillingState != &quot;Pontevedra&quot;,
BillingState != &quot;La Rioja&quot;,
BillingState != &quot;Salamanca&quot;,
BillingState != &quot;Segovia&quot;,
BillingState != &quot;Sevilla&quot;,
BillingState != &quot;Soria&quot;,
BillingState != &quot;Tarragona&quot;,
BillingState != &quot;Santa Cruz de Tenerife&quot;,
BillingState != &quot;Teruel&quot;,
BillingState != &quot;Toledo&quot;,
BillingState != &quot;Valencia&quot;,
BillingState != &quot;Valladolid&quot;,
BillingState != &quot;Vizcaya&quot;,
BillingState != &quot;Zamora&quot;,
BillingState != &quot;Zaragoza&quot;
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use correct Address State/Province name. For example: A Coruña.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_must_be_specified</fullName>
        <active>false</active>
        <errorConditionFormula>AND( Created_form_Lead__c  &lt;&gt; &apos;&apos;,
ISPICKVAL( sf42_de_Type_from_Lead__c , &apos;&apos;)
)</errorConditionFormula>
        <errorMessage>Field &quot;Type&quot; cannot be empty. 
Please return to Lead record and add value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UnitedStates_Billing_State_validation</fullName>
        <active>true</active>
        <description>Validate United Stated state name. Must be AL, AK, AZ, AR, CA, CO, CT, DC, DE, FL, GA, HI, ID, IL, IN, IA, KS, KY, LA, ME, MD, MA, MI, MN, MS, MO, MT, NE, NV, NH, NJ, NM, NY, NC, ND, OH, OK, OR, PA, PR, RI, SC, SD, TN, TX, UT, VT, VA, WA, WV, WI, WY.</description>
        <errorConditionFormula>BillingCountry = &quot;United States&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;North America&apos;) &amp;&amp; AND(

BillingState != &quot;AL&quot;,BillingState != &quot;AK&quot;,
BillingState != &quot;AZ&quot;,BillingState != &quot;AR&quot;,
BillingState != &quot;CA&quot;,BillingState != &quot;CO&quot;,
BillingState != &quot;CT&quot;,BillingState != &quot;DE&quot;,
BillingState != &quot;FL&quot;,BillingState != &quot;GA&quot;,
BillingState != &quot;HI&quot;,BillingState != &quot;ID&quot;,
BillingState != &quot;IL&quot;,BillingState != &quot;IN&quot;,
BillingState != &quot;IA&quot;,BillingState != &quot;KS&quot;,
BillingState != &quot;KY&quot;,BillingState != &quot;LA&quot;,
BillingState != &quot;ME&quot;,BillingState != &quot;MD&quot;,
BillingState != &quot;MA&quot;,BillingState != &quot;MI&quot;,
BillingState != &quot;MN&quot;,BillingState != &quot;MS&quot;,
BillingState != &quot;MO&quot;,BillingState != &quot;MT&quot;,
BillingState != &quot;NE&quot;,BillingState != &quot;NV&quot;,
BillingState != &quot;NH&quot;,BillingState != &quot;NJ&quot;,
BillingState != &quot;NM&quot;,BillingState != &quot;NY&quot;,
BillingState != &quot;NC&quot;,BillingState != &quot;ND&quot;,
BillingState != &quot;OH&quot;,BillingState != &quot;OK&quot;,
BillingState != &quot;OR&quot;,BillingState != &quot;PA&quot;,
BillingState != &quot;RI&quot;,BillingState != &quot;SC&quot;,
BillingState != &quot;SD&quot;,BillingState != &quot;TN&quot;,
BillingState != &quot;TX&quot;,BillingState != &quot;UT&quot;,
BillingState != &quot;VT&quot;,BillingState != &quot;VA&quot;,
BillingState != &quot;WA&quot;,BillingState != &quot;WV&quot;,
BillingState != &quot;WI&quot;,BillingState != &quot;WY&quot;,
BillingState != &quot;DC&quot;,BillingState != &quot;PR&quot;
)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use: 
AL, AK, AZ, AR, CA, CO, CT, DC, DE, FL, GA, HI, ID, IL, IN, IA, KS, KY, LA, ME, MD, MA, MI, MN, MS, MO, MT, NE, NV, NH, NJ, NM, NY, NC, ND, OH, OK, OR, PA, PR, RI, SC, SD, TN, TX, UT, VT, VA, WA, WV, WI or WY.</errorMessage>
    </validationRules>
</CustomObject>